Pedido detalhado